--- a/bigocheatsheetenglish.html
+++ b/bigocheatsheetenglish.html
@@ -142,7 +142,7 @@
 <body>
   <header class="head">
       <h2>Big-O Cheat Sheet</h2>
-      <a class="end" href="bigocheatsheettelugu.html"><Button>Click Here For Telugu</Button></a>
+      <a class="end" href="index.html"><Button>Click Here For Telugu</Button></a>
 
   </header>
   <div>
