--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
 
       body{
-        margin: 0;
+        margin: 0 auto;
         width: 98.6%;
         text-align: center;
         padding-top: 90px;
