--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
 
       body{
-        margin: 0 auto;
+        margin: 0;
         width: 98.6%;
         text-align: center;
         padding-top: 90px;
@@ -146,7 +146,7 @@
   
     <a class="end" href="bigocheatsheetenglish.html" ><Button >Click Here For English</Button></a>
   </header>
-  <div>
+  <div style="margin:0 auto;>
   <div class="Para">
     <h2>నీ సంక్లిష్టతలను తెలుసుకో!</h2>
     <p>హాయ్! ఈ వెబ్‌పేజీ కంప్యూటర్ సైన్స్‌లో ఉపయోగించే సాధారణ అల్గారిథమ్‌ల యొక్క స్పేస్ మరియు టైమ్ బిగ్-ఓ సంక్లిష్టతలను కవర్ చేస్తుంది. గతంలో టెక్నికల్ ఇంటర్వ్యూలకు సిద్ధమవుతున్నప్పుడు, శోధన మరియు క్రమబద్ధీకరణ అల్గారిథమ్‌ల కోసం అత్యుత్తమ, సగటు మరియు చెత్త సంక్లిష్టతలను కలిపి ఇంటర్నెట్‌ను క్రాల్ చేస్తూ గంటల తరబడి గడిపాను. గత కొన్ని సంవత్సరాలుగా, నేను అనేక సిలికాన్ వ్యాలీ స్టార్టప్‌లతో పాటు గూగుల్,ఫేస్బుక్, యాహూ!, లింక్డ్ఇన్ మరియు ఉబెర్ వంటి కొన్ని పెద్ద కంపెనీలలో ఇంటర్వ్యూ చేసాను మరియు నేను ఇంటర్వ్యూకి సిద్ధమైన ప్రతిసారీ "ఎందుకు? ఎవరైనా మంచి బిగ్-ఓ చీట్ షీట్‌ని సృష్టించలేదా?". కాబట్టి, మీ అందరికీ ఒక టన్ను సమయం ఆదా చేయడానికి, నేను ముందుకు వెళ్లి ఒకదాన్ని సృష్టించాను. ఆనందించండి! - ఎరిక్</p>
